# Agent_Template_GO_Python

./: README.md
Go_API/web-service-gin/: go.mod  main.go
Py_BackEnd/: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile.agents  dockerfile.db  fastapi_logging_logging_utils.py  fastapi_logging_utils.py  pyproject.toml  requirements.txt  run.sh  server_agents.py  server_rag.py  setup_Chroma_db.py  setup_sqlite_db.py  smolagent_class.py  utils.py
Py_BackEnd/Agents/: server_agents.py  smolagent_class.py
Py_BackEnd/Database/: .dockerignore  setup_sqlite_db.py
Py_BackEnd/Database/data/chroma/: chroma.sqlite3
Py_BackEnd/Database/data/python_wiki/: folklore.txt  general.txt  habitat.txt  human health.txt  skin trade.txt  taxonomy.txt
Py_BackEnd/Database/data/sqlite/: python.db
Py_BackEnd/data/chroma/: chroma.sqlite3
Py_BackEnd/data/python_wiki/: feeding.txt  reproduction.txt
Py_BackEnd/data/sqlite/: python.db
