[project]
name = "py-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13" # no 3.14 due to pypika dependency
dependencies = [
    "chromadb==1.3.5",
    "ddgs>=9.9.2",
    "fastapi>=0.122.0",
    "ipython>=9.7.0",
    "jupyter>=1.1.1",
    "requests>=2.32.5",
    "smolagents>=1.23.0",
    "uvicorn>=0.38.0",
    "wikipedia-api>=0.8.1",
]
