[project]
name = "py-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13" # no 3.14 due to pypika dependency
dependencies = [
    "chromadb==1.4.1",
    "ddgs>=9.10.0",
    "fastapi[standard]>=0.128.0",
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "requests>=2.32.5",
    "smolagents>=1.24.0",
    "uvicorn>=0.40.0",
    "wikipedia-api>=0.8.1",
]
